# 20252026-215-autumn

./: README.md
template/: CMakeLists.txt  build.bat  build.sh  readme.md
template/env/exception/: CMakeLists.txt  readme.md
template/env/exception/inc/: base_exception.h
template/env/exception/src/: base_exception.cpp
template/env/implement/: CMakeLists.txt
template/env/implement/inc/: my_class.h  point.h  polygon.h  polygon_utils.h  segment.h
template/env/implement/src/: my_class.cpp  point.cpp  polygon.cpp  polygon_utils.cpp  segment.cpp
template/env/interface/: CMakeLists.txt  readme.md
template/env/interface/inc/: interface.h  interface_stream.h
template/env/interface/src/: interface.cpp  interface_stream.cpp
template/env/resource/: readme.md
template/env/resource/inc/: resource.h
template/env/task/: readme.md
template/env/task/inc/: my_class.h
template/env/task/src/: my_class.cpp
template/src/: main.cpp
template/test/: test_scenario_02.txt  test_scenario_04.txt  test_scenario_05.txt  test_scenario_06.txt
