cmake_minimum_required(VERSION 3.10)
project(exception CXX)
set(EXCEPTION_TARGET "exception")
set(EXCEPTION_HEADERS inc/base_exception.h)
set(EXCEPTION_SOURCES src/base_exception.cpp)
add_library(${EXCEPTION_TARGET} STATIC ${EXCEPTION_HEADERS} ${EXCEPTION_SOURCES})
target_include_directories(${EXCEPTION_TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_compile_options(${EXCEPTION_TARGET} PRIVATE $<$<CONFIG:Debug>:-g -O0> $<$<CONFIG:Release>:-O3>)