cmake_minimum_required(VERSION 3.10)
project(implement CXX)
set(IMPLEMENT_TARGET "implement")
set(IMPLEMENT_HEADERS inc/polygon.h)
set(IMPLEMENT_SOURCES src/polygon.cpp)
add_library(${IMPLEMENT_TARGET} STATIC ${IMPLEMENT_HEADERS} ${IMPLEMENT_SOURCES})
target_include_directories(${IMPLEMENT_TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_link_libraries(${IMPLEMENT_TARGET} PRIVATE exception)
target_compile_options(${IMPLEMENT_TARGET} PRIVATE $<$<CONFIG:Debug>:-g -O0> $<$<CONFIG:Release>:-O3>)