cmake_minimum_required(VERSION 3.10)
project(interface CXX)
set(INTERFACE_TARGET "interface")
set(INTERFACE_HEADERS inc/interface.h inc/interface_stream.h)
set(INTERFACE_SOURCES src/interface.cpp src/interface_stream.cpp)
add_library(${INTERFACE_TARGET} STATIC ${INTERFACE_HEADERS} ${INTERFACE_SOURCES})
target_include_directories(${INTERFACE_TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc PUBLIC ${CMAKE_SOURCE_DIR}/env/resource/inc)
target_link_libraries(${INTERFACE_TARGET} PRIVATE exception)
target_compile_options(${INTERFACE_TARGET} PRIVATE $<$<CONFIG:Debug>:-g -O0> $<$<CONFIG:Release>:-O3>)